# ai-try

embedding/: README.md  main.py  pyproject.toml  transformer.py
pymilvus-try/: README.md  main.py  pyproject.toml
pymilvus-try/module/: embeddings.py  milvus.py
qdrant-try/: README.md  main.py  pyproject.toml
qdrant-try/module/: embeddings.py  qdrant.py
sentiment-analysis/: README.md  main.py  pipeline.py  pyproject.toml  text_generation.py
streamlit-try/: constant.py  homepage.py  makefile  pyproject.toml
streamlit-try/.streamlit/: config.toml
streamlit-try/module/: embeddings.py  langchain.py  milvus.py
streamlit-try/pages/: chat.py  upload_file.py
