[tool.poetry]
name = "embedding"
version = "0.1.0"
description = ""
authors = ["rainbow <g901612002@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sentence-transformers = "^3.0.1"
transformers = "^4.41.2"
torch = "^2.3.1"
torchvision = "^0.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
