[tool.poetry]
name = "qdrant-try"
version = "0.1.0"
description = ""
authors = ["rainbow <g901612002@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sentence-transformers = "^3.0.1"
torch = "^2.3.1"
qdrant-client = "^1.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
