[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["rainbow <g901612002@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.41.2"
torchvision = "^0.18.1"
torch = "^2.3.1"
pylint = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
